fix-align di review

--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ a{
 
 /* REVIEW */
 #review{
-    display: flex;align-content: center;justify-content: center;align-items: center;margin-top: 2vw;margin-top: 5vw;
+    display: flex;align-content: center;justify-content: center;align-items: center;margin-top: 3vw;;
 }
 
 #review3{
